# whois

./: CMakeLists.txt  LICENSE  README.md  query.c++  query.hpp  whois.c++
